--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,30 +1,17 @@
 ﻿
-@model IEnumerable<Category>
+@model IEnumerable<Film>
 
 @{
-    //ViewData["Title"] = "Strona główna";
-    ViewBag.Title = "Strona główna";
+    ViewData["Title"] = "Hej";
+    ViewBag.Title = "Główna";
 }
 
 <div class="text-center">
-
-
-    <ul>
-        @foreach (var category in Model)
+    @foreach (var film in Model)
+    {
+        if (film.Poster != null)
         {
-
-            <li>
-                @category.Name
-                <i>
-
-                    @category.Desc
-                </i>
-            </li>
-           
-
+            <a href="@Url.Action("Details", "Films", new{filmId = film.FilmId})"><img class="posters" src="~/obrazki/@film.Poster" /></a>
         }
-
-
-    </ul>
-       
+    }
 </div>
