--- a/Views/Shared/_MainLayout.cshtml
+++ b/Views/Shared/_MainLayout.cshtml
@@ -53,6 +53,8 @@
         <a href="@Url.Action("FooterSites", "Home", new { name = "MetodyPlatnosci"})">Metody płatności</a>
         <a href="@Url.Action("FooterSites", "Home", new { name = "Regulamin"})">Regulamin</a>
         <a href="@Url.Action("FooterSites", "Home", new { name = "Kontakt"})">Kontakt</a>
+        <a href="@Url.Action("AddFilm", "Films")" class="btn btn-success"> Dodaj film</a>
+    
     </footer>
 
 </body>
