--- a/Views/Films/Details.cshtml
+++ b/Views/Films/Details.cshtml
@@ -15,3 +15,8 @@
         </td>
     </tr>
 </table>
+
+<button class="btn-success" onclick="window.location.href='@Url.Action("EditFilm","Films", new{filmId= Model.FilmId})'">
+    Edytuj
+
+</button>
