Usuwanie elementów z koszyka

--- a/Views/Shared/_MainLayout.cshtml
+++ b/Views/Shared/_MainLayout.cshtml
@@ -58,5 +58,8 @@
 		<a href="@Url.Action("AddFilm", "Films")" class="btn btn-success">Dodaj film</a>
 	</footer>
 
+
+	@RenderSection("Scripts", false);
+	
 </body>
 </html>
