--- a/Views/Shared/Components/Menu/_Menu.cshtml
+++ b/Views/Shared/Components/Menu/_Menu.cshtml
@@ -11,5 +11,16 @@
 
 <ul class="nav navbar-nav navbar-right">
 	<li><a href="@Url.Action("Index", "Cart")"><span class="glyphicon glyphicon-shopping-cart"></span> (@ViewBag.quantity) </a></li>
-	<li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+
+	@if(User.Identity.IsAuthenticated)
+	{
+		<li><a href="@Url.Action("Logout", "Account")"><span class="glyphicon glyphicon-log-in"></span> Logout</a></li>
+	}
+	else
+	{
+		<li><a href="@Url.Action("Login", "Account")"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+		<li><a href="@Url.Action("Register","Account")"><span class="glyphicon glyphicon"></span> Register</a></li>
+	}
+
+	
 </ul>
